kubernetes/preprod/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprod-cloudcortex-deployment
  namespace: preprod
  labels:
    app: cloudcortex
    env: preprod
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
    type: RollingUpdate
  selector:
    matchLabels:
      app: cloudcortex
      env: preprod
  template:
    metadata:
      labels:
        app: cloudcortex
        env: preprod
    spec:
      containers:
        - name: cloudcortex
          image: 533267238276.dkr.ecr.ap-south-1.amazonaws.com/cloudcortex:>latest>
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 8080
              name: api
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: preprod-cloudcortex-application-config
