kubernetes/preprod/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: preprod
    app: cloudcortex
    layer: frontend
  name: preprod-cloudcortex-service
  namespace: preprod
spec:
  type: NodePort
  selector:
    app: cloudcortex
  ports:
    - name: api
      port: 8080
      targetPort: 8080
